--- a/index.html
+++ b/index.html
@@ -53,15 +53,18 @@
             <h2 class="text-2xl font-semibold mb-6 text-white">Configurar Backtest</h2>
             <form id="backtest-form" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <div>
-                    <label for="ativo" class="block text-sm font-medium text-gray-300 mb-2">Ativo (ex: I:SPX)</label>
-                    <input type="text" id="ativo" value="I:SPX" class="w-full bg-gray-700 border-gray-600 rounded-md p-2.5 text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                    <label for="ativo" class="block text-sm font-medium text-gray-300 mb-2">Ativo (Ação dos EUA)</label>
+                    <!-- MUDANÇA: O valor padrão agora é uma ação (AAPL) que funciona no plano gratuito -->
+                    <input type="text" id="ativo" value="AAPL" class="w-full bg-gray-700 border-gray-600 rounded-md p-2.5 text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
                 </div>
                 <div>
                     <label for="data_inicio" class="block text-sm font-medium text-gray-300 mb-2">Data Início</label>
+                    <!-- MUDANÇA: Datas padrão no passado -->
                     <input type="date" id="data_inicio" value="2023-01-01" class="w-full bg-gray-700 border-gray-600 rounded-md p-2.5 text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
                 </div>
                 <div>
                     <label for="data_fim" class="block text-sm font-medium text-gray-300 mb-2">Data Fim</label>
+                    <!-- MUDANÇA: Datas padrão no passado -->
                     <input type="date" id="data_fim" value="2023-12-31" class="w-full bg-gray-700 border-gray-600 rounded-md p-2.5 text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
                 </div>
                 <div>
@@ -179,7 +182,6 @@
     const chartPlaceholder = document.getElementById('chart-placeholder');
     const chartContainer = document.getElementById('chart-container');
 
-    // Inicializa o gráfico vazio ao carregar a página
     document.addEventListener('DOMContentLoaded', () => {
         initializeEmptyChart();
     });
@@ -210,7 +212,6 @@
         };
 
         try {
-            // Use o URL do seu serviço Render quando estiver em produção
             const apiUrl = window.location.hostname === '127.0.0.1' ? 'http://127.0.0.1:5001/backtest' : '/backtest';
             const response = await fetch(apiUrl, {
                 method: 'POST',
@@ -312,7 +313,6 @@
     function createOrUpdateChart(ohlcData, trades) {
         chartPlaceholder.style.display = 'none';
         
-        // Limpa séries antigas antes de adicionar novas
         chart.series().forEach(series => chart.removeSeries(series));
 
         const candleSeries = chart.addCandlestickSeries({
