--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         // --- State Variables ---
         let currentBacktestData = null;
         let chart = null;
+        let series = []; // Manter referência das séries para removê-las
 
         // --- Element Constants ---
         const form = document.getElementById('backtest-form');
@@ -209,11 +210,6 @@
             loadingSpinner.classList.remove('hidden');
             errorMessage.classList.add('hidden');
             
-            // CORREÇÃO: Remove a instância do gráfico anterior para recriá-la
-            if (chart) {
-                chart.remove();
-                chart = null;
-            }
             chartPlaceholder.style.display = 'flex';
             chartPlaceholder.textContent = 'Carregando dados do gráfico...';
 
@@ -346,13 +342,18 @@
             if (!chart) {
                 initializeEmptyChart();
             }
-            if (!chart) return; // Se ainda assim falhar, sai
+            if (!chart) return;
 
-            // Esta função agora assume que o gráfico já está limpo e apenas adiciona as novas séries
+            // CORREÇÃO: Remove todas as séries anteriores antes de adicionar novas
+            series.forEach(s => chart.removeSeries(s));
+            series = [];
+
+            // CORREÇÃO: O nome da função é addCandlestickSeries (com 's' minúsculo)
             const candleSeries = chart.addCandlestickSeries({
                 upColor: '#22C55E', downColor: '#EF4444', borderDownColor: '#EF4444',
                 borderUpColor: '#22C55E', wickDownColor: '#EF4444', wickUpColor: '#22C55E',
             });
+            series.push(candleSeries); // Guarda a referência da nova série
 
             candleSeries.setData(ohlcData);
             
