--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container mx-auto p-4 md:p-8">
         <header class="text-center mb-10">
             <h1 class="text-4xl md:text-5xl font-extrabold text-white">Plataforma de Backtest</h1>
-            <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Teste a estratégia, visualize no gráfico e analise com IA Samuca Pederasta.</p>
+            <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">Teste a estratégia, visualize no gráfico e analise com IA.</p>
         </header>
 
         <div class="card max-w-6xl mx-auto p-6 mb-8">
